--- a/day_23/aoc.cabal
+++ b/day_23/aoc.cabal
@@ -7,20 +7,9 @@ copyright:      2020 Dominik Wołek
 build-type:     Simple
 extra-source-files:
 
-library
-  exposed-modules:
-    Abs
-    Lex
-    Par1
-    Par2
-
-  other-modules:
-  hs-source-dirs:
-      bnfc
-  build-depends:
-      array
-    , base >=4.7 && <5
-  default-language: Haskell2010
+source-repository head
+  type: git
+  location: https://github.com/githubuser/instant
 
 executable 18
   main-is: 18.hs
@@ -29,5 +18,5 @@ executable 18
   ghc-options:
   build-depends:
       base >=4.7 && <5
-    , aoc
+    , math
   default-language: Haskell2010
